Update: Improved simulation rendering and UI tweaks