@@ -54,6 +54,11 @@
                 <version>3.1.0</version>
                 <configuration>
                     <mainClass>OrbitalSandbox</mainClass>
+                    <arguments>
+                        <argument>--add-opens=java.base/java.lang=ALL-UNNAMED</argument>
+                        <argument>--add-opens=java.desktop/sun.awt=ALL-UNNAMED</argument>
+                        <argument>--add-opens=java.desktop/sun.java2d=ALL-UNNAMED</argument>
+                    </arguments>
                 </configuration>
             </plugin>
             <plugin>
